--- a/yritys.html
+++ b/yritys.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Clenix | Yritys</title>
+    <title>Clenix | Yritys Yritys Yritys</title>
 
     <meta name="description" content="Siivousta ja .... (description)" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
