Yrityssiivoukset-sivu #finished

--- a/yrityssiivoukset.html
+++ b/yrityssiivoukset.html
@@ -36,26 +36,14 @@
                                 <span>Yrityssiivoukset</span>
                             </h1>
                             <p class="lead mb-3 w-75">
-                                <span></span><a class="font-weight-bold text-white" href="http://themestr.app">Clenix Oy</a>
+                                <span></span><a class="font-weight-bold text-white" href="http://themestr.app">Yrityssiivoukset</a>
 
-tarjoaa siivouspalveluja ammattitaidolla ja luottamuksella. Siivouspalvelumme kattavat kotisiivoukset, yrityssiivoukset sekä desinfiointipalvelut. Teemme työmme takuutyönä. Korjaamme mahdolliset puutteet pikaisesti.
-
-Siivouspalvelumme sisältää suursiivoukset, ylläpitosiivoukset, ikkunanpesut, sohvien ja mattojen pesut sekä muut kodin työt. Työntekijämme ovat vakituisessa työsuhteessa, emme käytä alihankkijoita emmekä tuuraajia. Kotitaloudet saavat palvelustamme kotitalousvähennyksen.
+ kattavat siivoukset pääkaupunkialueella tunti-, urakka- tai sopimussiivouksella. Siivoamme muun muassa toimistot, liikehuoneistot ja päiväkodit.
 
                             </p>
-                            <a class="btn btn-outline-light btn-lg mr-2" href="http://google.com" target="_new">Tilaa Kotisiivous</a>
+                            <a class="btn btn-outline-light btn-lg mr-2" href="http://google.com" target="_new">Tilaa Yrityssiivous</a>
                                     </div>
-                                      <div class="esimerkkibtn">
 
-                                      <h3 id="esimerkkitxt">Esimerkkihintoja erilaisille kodeille </h3>
-                                        <a class="btn btn-primary mt-auto" href="#">LAPSIPERHE</a>
-                                        <br>
-                                        <br>
-                                        <a class="btn btn-primary mt-auto" href="#">KAKSI AIKUISTA</a>
-                                        <br>
-                                        <br>
-                                        <a class="btn btn-primary mt-auto" href="#">ELÄINKOTI</a>
-                                      </div>
 
                                     </div>
 
@@ -131,72 +119,15 @@ Siivouspalvelumme sisältää suursiivoukset, ylläpitosiivoukset, ikkunanpesut,
 
 
 
-                    <h3 class="card-title text-primary"><strong>KOTITALOUDET</strong></h3>
+                    <h3 class="card-title text-primary"><strong>YRITYSSIIVOUKSET</strong></h3>
                       <p class="card-text">
+                        Siivouspalveluihimme kuuluvat; ylläpitosiivous, suursiivous, lattioiden peruspesut ja vahaukset sekä ikkunoiden pesut.
 
-Suuri joukko asiakkaitamme ovat olleet aivan alusta – vuodesta 2003 – asti nauttimassa palveluistamme. Tiedät kuka kotonasi työskentelee, koska arvostamme jokaista kotia ja palveluhenkilöämme! Kunnioitamme kaikkia työntekijöitämme ja valitsemme heidät huolellisesti. Tarkistamme aina uusien työntekijöiden taustat. Palveluhenkilöillämme on vaitiolovelvollisuus.
+                        Teemme työmme huolellisuudella ja ammattitaidolla. Käytämme luontoystävällisiä pesuaineita ja työhön vaadittavia oikeita välineitä.
 
-Jokaisella palveluhenkilöllä on henkilökortti ja Clenixin työvaatteet joista tunnistatte työntekijämme. Vastaamme kaikista lakisääteisistä työnantajan velvotteista ja halutessanne saatte niistä todistuksen. Clenixillä on vastuuvakuutus vahinkojen varalta. Käymme aina luonanne ennen palvelun aloittamista ja kartoitamme yhdessä siivoustarpeenne.
-
-Räätälöimme palvelun asiakkaan toiveiden mukaisesti. Käynnin jälkeen pystymme arvioimaan kotinne siivoukselle kokonaishinnan. Pesuaineemme ovat luontoystävällisiä ja eri materiaaleille sopivia. Siivoamme omilla välineillä tai halutessa asiakkaan välineillä. Osa välineistä säilytetään asiakkaan kotona niin haluttaessa. Ylläpitosiivouksen lisäksi meiltä voi tilata lisäpalveluna: mattojen  ja huonekalujen pesun, ikkunoiden pesun, kaupassa käynnit, suursiivoukset sekä muita kodin töitä.
+                        Siivottavat kohteet sovitaan aina asiakkaan kanssa yhdessä ja tulemme käymään ennen aloitusta. Voit pyytää palveluistamme tarjouksen täyttämällä seuraavan kaavakkeen.
 </p>
                         </div>
-
-                  <div class="card-body d-flex flex-column align-items-start">
-                    <h3 class="card-title text-primary"><strong>Kotipalvelu ilman arvonlisäveroa</strong></h3>
-                      <p class="card-text">
-
-                        <ul>
-                          <li>ei tule toimeen jokapäiväisessä elämässä</li>
-                          <li>ikäihmiset, vammainen, toipilas</li>
-                          <li>jatkuva tai väliaikainen tila</li>
-                        </ul>
-
-Arvonlisäverottoman palvelun piiriin kuuluvat seuraavat työt: siivous-, ikkunanpesu-, ruokaostos- ja lumenluontipalvelut sekä muut kodinhoitotyöt ( ei sairaanhoidolliset työt). Arvonlisäverottoman kotipalvelun edellytys on voimassa oleva palvelusopimus ja siivoussuunnitelma eli palvelukuvaus. Nämä teemme yhdessä asiakkaan kanssa katselmuskäynnin yhteydessä.
-
-Palvelun tarjoajalta vaaditaan omavalvontasuunnitelmaa ja se on nähtävissä toimipisteessämme tai halutessa se esitellään katselmuskäynnin yhteydessä. Palvelustamme saatte kotitalousvähennyksen verotuksessa.
-
-Annamme tästä mielellämme lisätietoja.
-<br>
-<br>
-Lisätietoja <a href="https://www.vero.fi/">www.vero.fi</a>
-<br>
-<br>
-Ystävällisesti,
-Eija Tamminen, 050 3525081
-</p>
-                  </div>
-                  <div class="card-body d-flex flex-column align-items-start">
-                    <h5 class="card-title text-primary"><strong>Kotisiivoushinnasto ( hinnat sis.alv 24%)</strong></h5>
-                      <h6 class="paksuhko">SOPIMUSASIAKKAAT</h6>
-                        <ul>
-                          <li>Ylläpitosiivous 4 krt/kk 40,30 eur/h/hlö</li>
-                          <li>Ylläpitosiivous 2 krt/kk 40,80 eur/h/hlö</li>
-                          <li>Ylläpitosiivous 1 krt/kk 41,90 eur/h/hlö</li>
-                          <li>Raskaammat työt, esim. suursiivoukset ja ikkunoiden pesut 44,50 eur/h/hlö.</li>
-                          <li>Pesuaine/välinemaksu on 51 eur/vuosi (sis. puhdistustahnan ja luutut käyttöön).</li>
-                          <li>Minimityöaika 3h / kerta. Emme veloita kilometrikorvauksia, mutta laskemme
-ajankäyttöön siirtymäaikaa kohteiden välille, joka on noin 5-15 min, riippuen, missä kohde sijaitsee.</li>
-                          <li>perusmaksu 5 eur/kk</li>
-                        </ul>
-                      <p class="card-text">Lähetämme sopimusasiakkaille ilmaisen laskulistakoonnin vuoden maksuista automaattisesti.</p>
-                      <h6 class="paksuhko">KERTA-ASIAKKAAT</h6>
-                      <ul>
-                        <li>kerta- ja suursiivous sekä ikkunoiden pesut 44,50 eur/h</li>
-                        <li>pesuaine-, väline- ja perusmaksu 11 eur/kerta</li>
-                        <li>muutto- ja remonttisiivous 45 eur/h sekä pesuaine- ja välinemaksu 15 eur/kerta</li>
-                        <li>mattojen ja sohvien pesut tarjousten perusteella</li>
-                        <li>raivaussiivoukset tarjousten perusteella</li>
-                        <li>desinfiointisiivoukset tarjousten perusteella</li>
-                      </ul>
-                      <p class="card-text">
-
-Laskutamme kerran kuukaudessa, kuukauden lopussa. Maksuehto 14 pv ja huomautuksesta perimme 5 eur/huomautus. Viivästyskorko on korkolain mukainen.
-
-Jotta Clenixin asiakkaat saavat kotitalousvähennyksen työstämme, vakuutamme, että Clenix on merkitty ennakkoperintä-,  työnantaja-  ja alv-velvollisten rekisteriin. Pyydettäessä toimitamme verovelkatodistuksen. Jos tapahtuu muutoksia, olemme velvoitettuja ilmoittamaan asiakkaalle. Verotustiedot voitte tarkastaa: <a href="https://www.ytj.fi/">www.ytj.fi</a>. Y-tunnuksemme on 1862973-9.
-</p>
-                  </div>
-
                   <br>
                   <br>
                   <br>
