--- a/desinfiointi.html
+++ b/desinfiointi.html
@@ -16,8 +16,207 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
   </head>
   <body>
+
+
+
+<a id="clenixstart"></a> <!-- Anchor for autoScroll.-->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 p-0 bg-primary vh-50 py-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-7 py-2 text-light">
+                            <h1 class="display-3 mb-0">
+
+
+                                <span>Desinfiointi</span>
+                            </h1>
+                            <p class="lead mb-3 w-75">
+                                <span></span><a class="font-weight-bold text-white" href="http://themestr.app"></a>
+                                Asuinhuoneiston pitkään siivoamatta jättäminen aiheuttaa hajuhaittoja asukkaille ja mikrobit aiheuttavat huomattavia terveydellisiä ongelmia. Monesti ongelmat tulevat esille myös samassa taloyhtiössä asuville.</p>
+                            <a class="btn btn-outline-light btn-lg mr-2" href="http://google.com" target="_new">Tilaa Desinfiointi</a>
+                                    </div>
+
+                        </div>
+                           </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+          <div class="container">
+
+
+              <div class="titlo">
+
+                  </div>
+                  </div>
+                  <br>
+
+
+                <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary" id="navbar1">
+                    <div class="container">
+                        <a class="navbar-brand mr-1 mb-1 mt-0" href="../"><img src="img\banner-logo.png" alt="Clenix"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+
+                        <div class="navbar-collapse collapse justify-content-center" id="collapsingNavbar">
+
+                            <ul class="navbar-nav ml-auto">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="kotisiivoukset.html">Kotisiivoukset</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="yrityssiivoukset.html">Yrityssiivoukset</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="tuhoelaintorjunta.html">Tuhoeläintorjunta</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="desinfiointi.html">Desinfiointi</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="raivaussiivous.html">Raivaussiivous</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="referenssit.html">Referenssit</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="rekrytointi.html">Rekrytointi</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="yritys.html">Yritys</a>
+                                </li>
+
+
+                                    </div>
+
+                        </div>
+                        <div class="phnum">
+                          <p>Siivouspalvelut p. 050 352 5081</p>
+                          <p>Tuhoeläintorjunta p. 010 3874 200</p>
+
+                        </div>
+
+                </nav>
+
+                <div class="midcontent">
+                <div class="container">
+                  <div class="card-body d-flex flex-column align-items-start">
+
+
+
+                    <h3 class="card-title text-primary"><strong>Miksi desinfioint?</strong></h3>
+                      <p class="card-text">
+
+
+Mikrobit ja hajuhaitat leviävät helposti kanavien kautta muihin asuntoihin. Asuinhuoneiston peruspuhdistus ei välttämättä aina riitä. Teemme myös raivaussiivouksia ja desinfiointeja. Käytämme asianmukaisia ammattilaisille tarkoitettuja varusteita sekä aineita desinfiointeja suorittaessamme.
+
+Teemme työmme täysin luottamuksella. Voit pyytää palveluistamme tarjouksen täyttämällä seuraavan kaavakkeen.</p>
+                        </div>
+
+
+
+                  <br>
+                  <br>
+                  <br>
+                  <div class="container">
+
+                      <h3 class="tilaustitle">TILAUSLOMAKE</h3>
+
+                  <br>
+                  <br>
+                  </div>
+
+                </div>
+                </div>
+
+                <div class="downmid">
+
+
+                <div class="kotisiivousform">
+                  <form class="kotisiivouslomake" action="index.html" method="post">
+                    <input type="text" name="" value="" placeholder="Etunimi">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Sukunimi">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Osoite">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Postinumero">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Postitoimipaikka">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Sähköpostiosoite">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Puhelin">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Viesti">
+                    <br>
+                    <br>
+                    <input class="btn btn-primary mr-2" type="button" value="LÄHETÄ">
+                    <br>
+                    <br>
+
+                    <p>"Google Captcha here"</p>
+
+                  </form>
+                </div>
+
+
+
+
+
+
+                <footer>
+                  <ul class="footlist1">
+                    <li><strong>Clenix Oy</strong></li>
+                    <li>Kuusamantie 15 A</li>
+                    <li>04330 Lahela</li>
+                    <li>clenix@clenix.fi</li>
+                    <li>Y-tunnus 1862973-9 </li>
+                  </ul>
+                  <div class="footlist2n3">
+                  <ul class="footlist2">
+                    <li><strong>Siivouspalvelut</strong></li>
+                    <li> <a href="#">050 352 5081</a> </li>
+                    <a href="https://fb.me/clenix_siivous"><img id="fbico" src="img/icon/fbico.png" alt="No icon available."></a>
+                  </ul>
+
+                  <ul class="footlist3">
+                    <li><strong>Tuhoeläintorjunta</strong></li>
+                    <li> <a href="#">010 3874 200</a> </li>
+                  </ul>
+                  </div>
+
+                  <ul class="vkrmkfooter">
+                    <li> <a href="#"><strong>Meiltä voit vuokrata myös mökin</strong></a> </li>
+                  </ul>
+                </div>
+
+                <div class="copyrite">
+                  <h6>Nettisivut by <a href="https://modernitnettisivut.fi/">modernitnettisivut.fi</a> </h6>
+
+                </div>
+
+
+
+                </footer>
+
+
 
   </body>
 </html>
