--- a/raivaussiivous.html
+++ b/raivaussiivous.html
@@ -16,8 +16,251 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
   </head>
   <body>
+
+
+
+<a id="clenixstart"></a> <!-- Anchor for autoScroll.-->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 p-0 bg-primary vh-50 py-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-7 py-2 text-light">
+                            <h1 class="display-3 mb-0">
+
+
+                                <span>Raivaussiivous</span>
+                            </h1>
+                            <p class="lead mb-3 w-75">
+                                <span></span><a class="font-weight-bold text-white" href="http://themestr.app"></a>
+                                Asuinhuoneiston pitkään siivoamatta jättäminen aiheuttaa hajuhaittoja asukkaille ja mikrobit aiheuttavat huomattavia terveydellisiä ongelmia. Monesti ongelmat tulevat esille myös samassa taloyhtiössä asuville.
+
+                                Mikrobit ja hajuhaitat leviävät helposti kanavien kautta muihin asuntoihin. Asuinhuoneiston peruspuhdistus ei välttämättä aina riitä. Teemme myös raivaussiivouksia ja desinfiointeja. Käytämme asianmukaisia ammattilaisille tarkoitettuja varusteita sekä aineita desinfiointeja suorittaessamme.
+
+                                Teemme työmme täysin luottamuksella.</p>
+                            <a class="btn btn-outline-light btn-lg mr-2" href="http://google.com" target="_new">Tilaa Raivaussiivous</a>
+                                    </div>
+
+
+                                    </div>
+
+                        </div>
+                           </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+          <div class="container">
+
+
+              <div class="titlo">
+
+                  </div>
+                  </div>
+                  <br>
+
+
+                <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary" id="navbar1">
+                    <div class="container">
+                        <a class="navbar-brand mr-1 mb-1 mt-0" href="../"><img src="img\banner-logo.png" alt="Clenix"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+
+                        <div class="navbar-collapse collapse justify-content-center" id="collapsingNavbar">
+
+                            <ul class="navbar-nav ml-auto">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="kotisiivoukset.html">Kotisiivoukset</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="yrityssiivoukset.html">Yrityssiivoukset</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="tuhoelaintorjunta.html">Tuhoeläintorjunta</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="desinfiointi.html">Desinfiointi</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="raivaussiivous.html">Raivaussiivous</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="referenssit.html">Referenssit</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="rekrytointi.html">Rekrytointi</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="yritys.html">Yritys</a>
+                                </li>
+
+
+                                    </div>
+
+                        </div>
+                        <div class="phnum">
+                          <p>Siivouspalvelut p. 050 352 5081</p>
+                          <p>Tuhoeläintorjunta p. 010 3874 200</p>
+
+                        </div>
+
+                </nav>
+
+                <div class="midcontent">
+                <div class="container">
+                  <div class="card-body d-flex flex-column align-items-start">
+
+
+
+                    <h3 class="card-title text-primary"><strong>Asiakaspalaute 10.12.2015</strong></h3>
+                      <p class="card-text">
+Kiitos teille, olen ikuisesti kiitollinen siitä tuesta ja avusta, jonka teiltä sain.
+<br><br>
+Menneisyys tuntuu kaukaiselta painajaisunelta. Olen teettänyt pikkuhiljaa remonttiakin. Minulla käy paljon vieraita ja perheitä. Nyt minulla on kotieläinkin ystävänä. Enpä aikaisemmin olisi voinut sitä tehdä. Rakastan emännöintiä ja ruoanlaittoa. Ihanaa laittaa koti joulukuntoon.
+<br><br>
+Olen tyytyväinen, että päätökseni ”ei koskaan enää” on pitänyt. Joskus vähän pöydille kertyy kamaa, mutta ei päivää kauemmaksi. Tiskit on tiskattava joka päivä. Jääkaappiin ei jää lojumaan vanhentuneita tuotteita. Mutta aikoinaan tilanne ryöstäytyi käsistä työstressin ja kokemani kohtelun vuoksi ja eskaloitui kunnes kaikki oli ylivoimaista.
+<br><br>
+Nyt kun on parempi henkinen olo, myös ulkoisista asioista selviää. Siis sisäinen ja ulkoinen hyvinvointi tukevat toisiaan. Jos on kaaos sisällä, on myös ulkoisesti. Ja päinvastoin. Tärkeintä oli kohdata teidänlaisia ihmisiä, jotka eivät tuominneet vaan osoittivat ymmärtämistä. Ja vaikeinta oli avun pyytäminen.
+<br><br>
+Koska nyt pärjään omillani, pidän hieman taukoa siivouksesta. Kiitollisuuden tunteeni teitä kohtaan vaikeutti päätöksen tekoa. Mutta nyt kuitenkin päädyin tähän ratkaisuun. Aion kyllä siivousapua käyttää jatkossa helpottaakseni arkea.
+<br><br>
+Hyvää joulun odotusta ja kaikkea hyvää teille ja yrityksellenne!
+<br><br>
+– Terveisin, uuden elämän saanut asiakas
+</p>
+                        </div>
+
+                  <div class="card-body d-flex flex-column align-items-start">
+                    <h3 class="card-title text-primary"><strong>Asiakaspalaute Joulukuu 2012</strong></h3>
+                      <p class="card-text">
+                        Ulkoinen kaaos – sisäinen kaaos (Erään asiakkaan tarina)
+                        <br><br>
+                        Luulitko, että jenkkisarja ”Hoarders” on vain tarua. Ei ole. Minä elin samanlaisessa kaaoksessa, joka alkoi reilu kymmenen vuotta sitten, kun elämässäni tapahtui isoja asioita, joita en osannut käsitellä. Kodin ulkopuolella pinnistelin: hoidin työni mallikelpoisesti, tapasin ystäviä, matkustelin, osallistuin järjestöelämään. Voimat riittivät niihin, muttei enää kotitöihin. Kukaan ei aavistanut millainen kaaos kotonani oli.
+                        <br><br>
+                        Vuosi vuodelta kaaos vain lisääntyi. Roskat valtasivat kotini, keittiöön ei mahtunut, jääkaappiin ja pakastimeen jäivät ruoat vuosiksi. Minä – intohimoinen ruoanlaittaja – ostin kotiin vain kylmiä eineksiä. Kun suljin oven perässäni, en ajatellut kaaostani, mutta kotiin palatessa ahdistus palasi. Kerta toisensa jälkeen päätin hoitaa asian. Ostin jätesäkkejä ja puhdistusaineita. Kerta toisensa jälkeen ne puolestaan hautautuivat jätteiden alle. Pahinta oli, kun lapsenlapseni sanoi minulle ”mummi, en enää muista, millainen sinun kotisi on”. Aina piti keksiä jotain tekosyitä, miksi juuri nyt ei sovi tulla. Oli helppo naamioitua kiireisen virkanaisuran taakse.
+                        <br><br>
+                        Sitten kaiken häpeän oli tultava päivänvaloon – taloyhtiössä alkoi remontti. Elin metrisen roskakasan keskellä. Aloin siivota – jätesäkki jätesäkin jälkeen täyttyi. Siitä huolimatta kaaos oli ylivoimainen yksin selvitettäväksi.
+                        <br><br>
+                        Ajattelin jo helpointa poispääsyä tilanteesta – päätän päiväni. Onneksi järki voitti. Ajattelin, että synkän salaisuuteni paljastumisen lisäksi aiheutan surua pojalleni ja lapsenlapselleni. Soitin kaupunkini mielenterveyspäivystykseen, jossa minua rohkaistiin ottamaan yhteyttä raivaussiivousta tekevään yritykseen.
+                        <br><br>
+                        Näin teinkin ja heti seuraavana päivänä Clenixistä tultiin, kartoitettiin tilanne, tehtiin suunnitelma. Jo toisena päivänä ryhdyttiin tositoimiin. Siivous aloitettiin lapioilla! Olin itse koko ajan mukana. Tein jo alusta saakka itselleni selväksi, että nyt ei voi ryhtyä lajittelemaan. Roskien mukana saa mennä tavaroita, jotka olivat jo vuosia olleet hautautuneina roskiin – olinhan ilman niitä voinut elää jo kauan.
+                        <br><br>
+                        Raivaukseen kului kaksi-kolme päivää. Roskasäkkejä tuli kymmenkunta pakettiautollista. Remontti saattoi alkaa! Remontin jälkeen sitten perussiivottiin kotini – nyt voin jo sanoa KOTINI. Sohvakalusto jouduttiiin viemään kaatopaikalle, samoin jääkaappi. Niiden tilalle hankin uudet. Kaikki muut kauniit kalusteeni saatiin puhdistettua.
+                        <br><br>
+                        Nyt kun tuosta häpeän tunteen voittamisesta on kulunut reilu vuosi, edeltävät 10 vuotta tuntuvat painajaisunelta. Minulla on käynyt paljon ystäviä. Perheeni käy usein. Olen ylpeä kauniista kodistani. Kenellekään en kuitenkaan ole voinut kertoa, millainen se oli reilu vuosi sitten. En ehkä kerrokaan.
+                        <br><br>
+                        Siivooja käy kerran kuukaudessa. Itse huolehdin siitä, että mikään ei enää kausaudu: roskat päivittäin ulos, tiskit tiskataan, tavarat paikoilleen päivittäin, pyykit kuivauksen jälkeen kaappeihin pinottuina jne. Kerran viikossa imuroin ja kosteamoppaan lattiat, siivoojat sitten vievät matot ulos ja tekevät tarkemman siivouksen.
+                        <br><br>
+                        Rohkaisen kaikkia, jotka tunnistavat itseään minun kertomuksestani, pyytämään rohkeasti apua. On ihanaa, kun voi avata kotioven pelkäämättä, että joku näkee sisälle. On ihanaa, kun ei tarvitse pelätä, että jonkun on päästävä asuntoon. On ihanaa, kun voi kutsua ystäviä kotiin. On ihanaa, kun voi kutsua perheen joulunviettoon. On ihanaa tulla KOTIIN.
+                        <br><br>
+                        – Asiakas, jonka toiveena oli elämä ja KOTI
+                        <br><br>
+                      </p>
+
+                  </div>
+                  
+
+                  <br>
+                  <br>
+                  <br>
+                  <div class="container">
+
+                      <h3 class="tilaustitle">TILAUSLOMAKE</h3>
+
+                  <br>
+                  <br>
+                  </div>
+
+                </div>
+                </div>
+
+                <div class="downmid">
+
+
+                <div class="kotisiivousform">
+                  <form class="kotisiivouslomake" action="index.html" method="post">
+                    <input type="text" name="" value="" placeholder="Etunimi">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Sukunimi">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Osoite">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Postinumero">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Postitoimipaikka">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Sähköpostiosoite">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Puhelin">
+                    <br>
+                    <br>
+                    <input type="text" name="" value="" placeholder="Viesti">
+                    <br>
+                    <br>
+                    <input class="btn btn-primary mr-2" type="button" value="LÄHETÄ">
+                    <br>
+                    <br>
+
+                    <p>"Google Captcha here"</p>
+
+                  </form>
+                </div>
+
+
+
+
+
+
+                <footer>
+                  <ul class="footlist1">
+                    <li><strong>Clenix Oy</strong></li>
+                    <li>Kuusamantie 15 A</li>
+                    <li>04330 Lahela</li>
+                    <li>clenix@clenix.fi</li>
+                    <li>Y-tunnus 1862973-9 </li>
+                  </ul>
+                  <div class="footlist2n3">
+                  <ul class="footlist2">
+                    <li><strong>Siivouspalvelut</strong></li>
+                    <li> <a href="#">050 352 5081</a> </li>
+                    <a href="https://fb.me/clenix_siivous"><img id="fbico" src="img/icon/fbico.png" alt="No icon available."></a>
+                  </ul>
+
+                  <ul class="footlist3">
+                    <li><strong>Tuhoeläintorjunta</strong></li>
+                    <li> <a href="#">010 3874 200</a> </li>
+                  </ul>
+                  </div>
+
+                  <ul class="vkrmkfooter">
+                    <li> <a href="#"><strong>Meiltä voit vuokrata myös mökin</strong></a> </li>
+                  </ul>
+                </div>
+
+                <div class="copyrite">
+                  <h6>Nettisivut by <a href="https://modernitnettisivut.fi/">modernitnettisivut.fi</a> </h6>
+
+                </div>
+
+
+
+                </footer>
+
+
 
   </body>
 </html>
