added main first-sight pictures to all individual pages.

--- a/desinfiointi.html
+++ b/desinfiointi.html
@@ -22,6 +22,22 @@
 
 
 
+    <div class="DesinfiointiPic">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+                    <img id="maintitlelogo" src="img/Clenix-LOGO.png" alt="">
+                    <h6 id="slogan"><strong>Palvelua asiakkaan parhaaksi</strong></h6>
+                    <br>
+                    <a href="#clenixstart"><img id="ardown" src="img/icon/ardww.png" alt="No image available."></a>
+    </div> <!-- Main pic .-->
+
 <a id="clenixstart"></a> <!-- Anchor for autoScroll.-->
 
     <div class="container-fluid">
