--- a/kotisiivoukset.html
+++ b/kotisiivoukset.html
@@ -22,6 +22,25 @@
 
 
 
+
+
+    <div class="KotisiivousPic">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+                    <img id="maintitlelogo" src="img/Clenix-LOGO.png" alt="">
+                    <h6 id="slogan"><strong>Palvelua asiakkaan parhaaksi</strong></h6>
+                    <br>
+                    <a href="#clenixstart"><img id="ardown" src="img/icon/ardww.png" alt="No image available."></a>
+    </div> <!-- Main pic .-->
+
+
 <a id="clenixstart"></a> <!-- Anchor for autoScroll.-->
 
     <div class="container-fluid">
@@ -45,6 +64,10 @@ Siivouspalvelumme sisältää suursiivoukset, ylläpitosiivoukset, ikkunanpesut,
                             </p>
                             <a class="btn btn-outline-light btn-lg mr-2" href="http://google.com" target="_new">Tilaa Kotisiivous</a>
                                     </div>
+
+
+
+
                                       <div class="esimerkkibtn">
 
                                       <h3 id="esimerkkitxt">Esimerkkihintoja erilaisille kodeille </h3>
@@ -56,6 +79,7 @@ Siivouspalvelumme sisältää suursiivoukset, ylläpitosiivoukset, ikkunanpesut,
                                         <br>
                                         <a class="btn btn-primary mt-auto" href="#">ELÄINKOTI</a>
                                       </div>
+
 
                                     </div>
 
