--- a/referenssit.html
+++ b/referenssit.html
@@ -20,7 +20,21 @@
   </head>
   <body>
 
+    <div class="ReferenssitPic">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
 
+                    <img id="maintitlelogo" src="img/Clenix-LOGO.png" alt="">
+                    <h6 id="slogan"><strong>Palvelua asiakkaan parhaaksi</strong></h6>
+                    <br>
+                    <a href="#clenixstart"><img id="ardown" src="img/icon/ardww.png" alt="No image available."></a>
+    </div> <!-- Main pic .-->
 
 <a id="clenixstart"></a> <!-- Anchor for autoScroll.-->
 
