formchanges #kotisiivoukset-page

--- a/kotisiivoukset.html
+++ b/kotisiivoukset.html
@@ -240,28 +240,28 @@ Jotta Clenixin asiakkaat saavat kotitalousvähennyksen työstämme, vakuutamme, 
 
                 <div class="kotisiivousform">
                   <form class="kotisiivouslomake" action="index.html" method="post">
-                    <input type="text" name="" value="" placeholder="Etunimi">
+                    <input type="text" class="kotsivfo" name="" value="" placeholder="Etunimi">
                     <br>
                     <br>
-                    <input type="text" name="" value="" placeholder="Sukunimi">
+                    <input type="text" class="kotsivfo" name="" value="" placeholder="Sukunimi">
                     <br>
                     <br>
-                    <input type="text" name="" value="" placeholder="Osoite">
+                    <input type="text" class="kotsivfo" name="" value="" placeholder="Osoite">
                     <br>
                     <br>
-                    <input type="text" name="" value="" placeholder="Postinumero">
+                    <input type="text" class="kotsivfo" name="" value="" placeholder="Postinumero">
                     <br>
                     <br>
-                    <input type="text" name="" value="" placeholder="Postitoimipaikka">
+                    <input type="text" class="kotsivfo" name="" value="" placeholder="Postitoimipaikka">
                     <br>
                     <br>
-                    <input type="text" name="" value="" placeholder="Sähköpostiosoite">
+                    <input type="text" class="kotsivfo" name="" value="" placeholder="Sähköpostiosoite">
                     <br>
                     <br>
-                    <input type="text" name="" value="" placeholder="Puhelin">
+                    <input type="text" class="kotsivfo" name="" value="" placeholder="Puhelin">
                     <br>
                     <br>
-                    <input type="text" name="" value="" placeholder="Viesti">
+                    <input type="text" class="kotsivfomsg" name="" value="" placeholder="Viesti">
                     <br>
                     <br>
                     <input class="btn btn-primary mr-2" type="button" value="LÄHETÄ">
